--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,8 +3,8 @@
     "rootDirs": ["src"],
     "outDir": "dist",
     "lib": ["es2020"],
-    "target": "es2020",
-    "module": "esnext",
+    "target": "ES2021",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
